<resources>
    <string name="app_name">Communere</string>

    <!--Authentication-->
    <string name="username">Username:</string>
    <string name="username_hint">Enter ur username</string>
    <string name="password">Password:</string>
    <string name="password_hint">Enter ur password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>

    <string name="full_name">Full Name:</string>
    <string name="full_name_hint">Enter ur full name</string>
    <string name="email_username">Email/Username:</string>
    <string name="email_username_hint">Enter ur email</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="confirm_password_hint">confirm ur password</string>
    <string name="image">Image:</string>

    <!--Main-->
    <string name="delete">Delete</string>
    <string name="update">Update</string>


</resources>