<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userDetailViewModel"
            type="com.nightmareinc.communere.userdetail.UserDetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="@dimen/size_70"
            android:layout_height="@dimen/size_70"
            android:layout_marginTop="@dimen/margin_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_60"
            android:text="TextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_photo" />

        <TextView
            android:id="@+id/username_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_60"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_60"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@+id/user_photo"
            />

        <EditText
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username_hint"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="@+id/username_title"
            app:layout_constraintTop_toBottomOf="@id/username_title"
            />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_60"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/username_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:textSize="@dimen/text_16"
            app:layout_constraintStart_toStartOf="@+id/password_title"
            app:layout_constraintTop_toBottomOf="@id/password_title"
            />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@+id/update_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_button"
            app:layout_constraintTop_toBottomOf="@id/password_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>