<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signupViewModel"
            type="com.nightmareinc.communere.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_100"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_60"
            android:hint="@string/full_name"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="@+id/fullname_title"
            app:layout_constraintTop_toBottomOf="@id/fullname_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_60"
            android:hint="@string/email_username"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullname_title" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="@+id/email_title"
            app:layout_constraintTop_toBottomOf="@id/email_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_60"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/email_title"
            app:layout_constraintTop_toBottomOf="@id/email_title" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textAllCaps="true"
            android:padding="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="@+id/password_title"
            app:layout_constraintTop_toBottomOf="@id/password_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginStart="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_60"
            android:hint="@string/confirm_password"
            app:boxBackgroundMode="outline"
            app:layout_constraintStart_toStartOf="@+id/password_title"
            app:layout_constraintTop_toBottomOf="@id/password_title" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textAllCaps="true"
            android:padding="@dimen/margin_10"
            app:layout_constraintStart_toStartOf="@+id/confirm_password_title"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_60"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_title"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>